Fixed video spacing.

--- a/styles.css
+++ b/styles.css
@@ -328,16 +328,19 @@ video {
 }
 
 #reel {
-	font-size: 0;
 	padding-top: 8px;
 	margin: 0px -8px -8px -8px;
+	& > div {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 	& iframe {
 		width: 92vw;
 		margin: 8px;
 		max-width: 580px;
-		max-height: 326px;
 		border-radius: 16px;
-		height: calc(92vw / 1.885);
+		aspect-ratio: 16 / 9;
 	}
 }
 
